--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-fastapi
-uvicorn[standard]
-pandas
-numpy
-scikit-learn
-streamlit
-requests
-matplotlib
+#fastapi
+#uvicorn[standard]
+#pandas
+#numpy
+#scikit-learn
+#streamlit
+#requests
+#matplotlib
+streamlit==1.36.0
+altair==4.2.2
