--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -8,8 +8,11 @@ RUN apt-get update && apt-get install -y \
     gcc \
  && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir -r /app/requirements.txt
+# ✅ use API-specific requirements
+COPY requirements.api.txt /app/requirements.api.txt
+RUN python -m pip install --no-cache-dir -r /app/requirements.api.txt \
+ && python -m pip show uvicorn \
+ && python -m uvicorn --version
 
 COPY . /app
 
@@ -17,4 +20,5 @@ ENV PYTHONUNBUFFERED=1
 
 EXPOSE 8000
 
-CMD ["uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "-m", "uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
